--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
     "react": "vite",
-    "electron": "electron .",
-    "build": "vite build",
-    "dist": "electron-builder"
+    "build": "vite build"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.1.5",
+    "@tauri-apps/cli": "^2.1.0",
     "apexcharts": "^4.1.0",
     "file-saver": "^2.0.5",
     "primeflex": "^3.3.1",
@@ -31,61 +29,11 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "electron": "^33.2.1",
-    "electron-builder": "^25.1.8",
-    "electron-is-dev": "^3.0.1",
-    "electron-packager": "^17.1.2",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "vite": "^6.0.1"
-  },
-  "build": {
-    "appId": "com.example.your_app",
-    "productName": "your_app",
-    "directories": {
-      "output": "dist_electron"
-    },
-    "files": [
-      "dist/**/*",
-      "main.js"
-    ],
-    "extraResources": {
-      "from": "dist/",
-      "to": "app/dist/"
-    },
-    "mac": {
-      "target": "dmg",
-      "category": "public.app-category.productivity"
-    },
-    "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "icon": "build/icon.ico"
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
-    },
-    "linux": {
-      "target": [
-        "AppImage",
-        "deb",
-        "tar.gz"
-      ],
-      "category": "Utility",
-      "icon": "build/icons"
-    }
   }
 }
